[project]
name = "seek-applied-jobs-extractor"
version = "0.1.0"
description = "Extract applied jobs data from seek.com.au"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "duckdb>=1.4.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "harlequin>=2.3.0",
]
